# cmasfo-git

./: .gitmodules  Cargo.toml  README.md  STRUCTURE.md
.github/: CONTRIBUTING.md  README_.md
_archive/c-cpp/cpp/hello/src/: hello.cpp
archive/c-cpp/cpp/hello/: CMakeLists.txt
archive/c-cpp/cpp/hello/src/: cli.cpp
rust/: Cargo.toml  README.md  build.rs  cli.rs  gui.rs
rust/cli/: main.rs
rust/cli/cli/: mod.rs
rust/gui/: main.rs
rust/src/: lib.rs
rust/src/cli/: help.rs  mod.rs
rust/src/cli/command/: mod.rs
rust/src/cli/nlp/: mod.rs
rust/src/cli/phind/: mod.rs
rust/src/cli/silly/: bg.rs  mod.rs
rust/src/cli/urban/: mod.rs
rust/src/gui/: mod.rs
rust/src/server/: mod.rs
rust/src/site/: mod.rs
rust/src/site/main/: mod.rs
rust/src/util/: get_right.rs  mod.rs  rand.rs
rust/src/util/cli_io/: mod.rs
rust/src/util/ds/: mod.rs
rust/src/util/file_io/: mod.rs
rust/src/util/fs/: mod.rs
rust/src/util/gui_io/: mod.rs
rust/src/util/io/: mod.rs
rust/src/util/net/: mod.rs
rust/src/util/rand_gen/: mod.rs
rust/src/util/str/: mod.rs
rust/src/util/string/: mod.rs
rust/src/util/web/: mod.rs
